--- a/packages/SettingsLib/SettingsTheme/res/drawable-v33/settingslib_spinner_background.xml
+++ b/packages/SettingsLib/SettingsTheme/res/drawable-v33/settingslib_spinner_background.xml
@@ -30,7 +30,7 @@
 
                 <shape>
                     <corners android:radius="28dp"/>
-                    <solid android:color="@android:color/system_accent1_100"/>
+                    <solid android:color="@android:color/transparent"/>
                     <size android:height="@dimen/settingslib_spinner_height"/>
                 </shape>
             </item>
