--- a/packages/SettingsLib/SettingsTheme/res/values-night-v31/colors.xml
+++ b/packages/SettingsLib/SettingsTheme/res/values-night-v31/colors.xml
@@ -51,4 +51,6 @@
     <color name="settingslib_surface_dark">@android:color/system_neutral1_800</color>
 
     <color name="settingslib_colorSurface">@color/settingslib_surface_dark</color>
+
+    <color name="settingslib_spinner_dropdown_color">@*android:color/bright_foreground_holo_dark</color>
 </resources>
